# adk-code-mode

./: AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docker/: Dockerfile
sandbox-wheel/: README.md  pyproject.toml
sandbox-wheel/src/adk_code_mode_sandbox/: __about__.py  __init__.py  __main__.py  _entry.py  _http_server.py  _rpc_client.py  protocol.py
src/adk_code_mode/: __about__.py  __init__.py  _artifact_tools.py  callback.py  executor.py  metadata.py  output.py  tool.py  tool_result_artifacts.py
src/adk_code_mode/runtime/: __init__.py  base.py  docker.py  protocol.py  remote.py
src/adk_code_mode/tools/: __init__.py  catalog.py  dispatcher.py  namespacing.py  normaliser.py  stubs.py
src/adk_code_mode/workspace/: __init__.py  files.py
tests/: _docker_helpers.py  _fake_runtime.py  conftest.py  test_agent_with_fake_llm.py  test_artifact_tools.py  test_callback.py  test_catalog.py  test_dispatcher.py  test_docker_image.py  test_docker_integration.py  test_host_loop.py  test_integration.py  test_metadata.py  test_namespacing.py  test_normaliser.py  test_output.py  test_protocol.py  test_remote_backend.py  test_remote_integration.py  test_runtime_docker.py  test_sandbox_entry.py  test_sandbox_rpc_client.py  test_stubs.py  test_tool.py  test_tool_result_artifacts.py  test_version.py  test_workspace_files.py
