[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adk-code-mode"
dynamic = ["version"]
description = "A \"Code Mode\" sandboxed code-execution tool for ADK agents to interact with tools, files, and custom packages with Python"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["adk", "code-mode", "execute-code", "agents", "a2a"]
authors = [
  { name = "A2A Net", email = "hello@a2anet.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "google-adk>=1.0.0,<2.0.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
docker = ["docker>=7.0.0"]

[dependency-groups]
dev = [
    "adk-code-mode[docker]",
    "mypy>=1.19.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.9",
    "types-docker>=7.0.0",
]

[project.urls]
Documentation = "https://github.com/A2ANet/adk-code-mode#readme"
Issues = "https://github.com/A2ANet/adk-code-mode/issues"
Source = "https://github.com/A2ANet/adk-code-mode"

[tool.hatch.version]
path = "src/adk_code_mode/__about__.py"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["sandbox-wheel/"]

[[tool.mypy.overrides]]
module = ["docker", "docker.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["websockets", "websockets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "sandbox-wheel/src"]
addopts = ["--strict-markers", "--strict-config", "-ra", "-m", "not docker"]
asyncio_mode = "auto"
markers = [
    "docker: integration tests that require a local Docker daemon. Run with `uv run pytest -m docker`.",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__ == .__main__.:"]
